# my-anki-scripts

./: README.md  pyproject.toml
notebooks/: view_collection.ipynb
