[tool.poetry]
name = "my-anki-scripts"
version = "0.1.0"
description = ""
authors = ["Maxence Frenette <maxence.frenette@gmail.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
